--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
 
     <uses-sdk
         android:minSdkVersion="32"
@@ -27,7 +28,7 @@
 
         <activity android:name="com.emutools.emubridge.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:theme="@style/Theme.EmuBridge">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -54,6 +55,15 @@
         <activity android:name="com.emutools.emubridge.SettingsActivity"
             android:theme="@style/SettingsTheme"/>
 
+        <activity
+            android:name="com.emutools.emubridge.EmulatorSettingsActivity"
+            android:label="Emulator Configurations"
+            android:parentActivityName="com.emutools.emubridge.MainActivity"
+            android:theme="@style/SettingsTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.emutools.emubridge.MainActivity" />
+        </activity>
 
         <provider
             android:name="androidx.core.content.FileProvider"
